--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,15 @@
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "bower-asset/components-font-awesome":">=4.7.0"
+        "bower-asset/components-font-awesome":">=4.7.0",
+        "kartik-v/yii2-grid": "@dev",
+        "kartik-v/yii2-widget-datepicker": "@dev",
+        "kartik-v/yii2-editable": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
         "yiisoft/yii2-gii": "~2.0.0",
         "yiisoft/yii2-faker": "~2.0.0",
-        "kartik-v/yii2-grid": "@dev",
-        "kartik-v/yii2-widget-datepicker": "@dev",
-        "kartik-v/yii2-editable": "@dev",
 
         "codeception/base": "^2.2.3",
         "codeception/verify": "~0.3.1"
